css/main.css
/*color references:

  dark: #252421;
  darkest-red: #B63621;
  dark-red: #D14027;
  standard-red: #D56350;
  light-red: #EA846C;
  lightest-red: #F1927C;

  green (chaider): #9FD6AB;
  turquoise (cartoon): #9FD6D2;
  lavender (bots): #86B1D0;
  yellow (chicken): #F5D56F;

*/


html, body {
  height: 100%;
  width: 100%;
  margin: 0 !important;
  padding: 0;
  scroll-behavior: smooth;
}

body {
  font-family: 'Helvetica', 'Arial', sans-serif;
  letter-spacing: 2%;
  background: #FFFEFC;
  color: #252421;
}

header {
  margin-top: -18px;
  width: 100%;
  height: 40px;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  position: fixed;
  z-index: 1;
}

.nav-link, .nav-link a:visited {
  font-size: 13px;
  margin-right: 20px;
  font-weight: 700;
  letter-spacing: 0.5px;
}

.nav-link a {
  color: #252421;
  padding-bottom: 3px;
  text-decoration: none;
  border-bottom: 2px solid #D14027;
}

.nav-link a:hover {
  background-image:url("data:image/svg+xml;charset=utf8,%3Csvg id='squiggle-link' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 -2 20 8'%3E%3Cstyle type='text/css'%3E.squiggle{animation:shift 1s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='%23000000' stroke-width='3' class='squiggle' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
  background-position: bottom;
  background-repeat: repeat-x;
  background-size: 10px;
  border-bottom: 0;
  padding-bottom: 6px;
  text-decoration: none;
}

#home {
  height: 100%;
  width: 100%;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
}

#about {
  height: 100%;
  width: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#work {
  height: 93%;
  width: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#home-content {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin: 0;
}

#home-introduction {
  margin-right: 50px;
  width: 330px;
  min-width: 330px;
}

#home-hello {
  letter-spacing: 1px;
  font-size: 24px;
  font-weight: 700;
  margin-bottom: 40px;
}

#home-text {
  font-size: 13px;
  line-height: 22px;
  letter-spacing: 0.75px;
  margin-bottom: 40px;
}

#home-text a:visited, #home-text a, #about-text a:visited, #about-text a {
  color: #D14027;
  font-weight: 700;
  transition: 0.3s;
}

#home-text a:hover, #about-text a:hover {
  color: #D56350;
  transition: 0.3s;
}

#logo{
  height: 450px;
  width: auto;
}

#mobile-links {
  display: none;
}

#about-title, #work-title {
  width: 726px;
  letter-spacing: 1px;
  font-size: 30px;
  font-weight: 700;
  margin-bottom: 40px;
}

#about-text, #work-text {
  width: 726px;
  font-size: 13px;
  line-height: 22px;
  letter-spacing: 0.75px;
}

table { 
  border: none; 
  border-collapse: collapse; 
  font-size: 12px;
  line-height: 20px;
  letter-spacing: 0.75px;
  vertical-align: top;
}

table td:first-child { 
  border-left: none; 
  padding-right: 20px;
}

table td:nth-child(2) { 
  border-right: none; 
  padding-left: 20px;
  font-size: 11px !important;
  width: 64%;
}

table td { 
  border-bottom: none;
  border-top: none; 
}

td, th {
  border: 2px solid #D14027;
  text-align: left;
  padding-top: 15px;
  padding-bottom: 15px;
}

footer {
  padding: 20px;
  text-align: center;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0.25px;

}

.spacer {
  display: none;
}

/*desktop responsiveness*/
@media screen and (max-width: 780px) {
  #logo{
    height: 300px !important;
    width: auto;
  }

  #home-content {
    flex-direction: column-reverse;
    justify-content: center;
    align-items: center;
    margin: 0;
  }

  #home-introduction {
    margin-right: 0px;
    width: 330px;
    min-width: 330px;
  }

  #home-hello {
    margin-top: 20px;
    margin-bottom: 20px;
  }

  #home-text {
    margin-bottom: 30px;
  }

  #work {
    margin-top: 15px !important; 
    margin-bottom: 100px !important;
  }

  #work-title {
    padding-top: 80px !important;
  }
}

@media screen and (max-width: 900px) {

  #logo {
    height: 350px;
  }

  .spacer {
    display: block;
  }

  #work {
    padding-bottom: 20px;
    padding-top: 50px;
  }
}

@media screen and (max-width: 930px) {

  #about-text, #about-title {
    width: 80%;
  }

  #work-text, #work-title {
    width: 80%;
  }

}

/*phone & mobile device responsiveness*/
@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {

  #logo{
    height: 700px;
    width: auto;
  }

  #home-content {
    flex-direction: column-reverse;
    justify-content: center;
    align-items: center;
    margin: 0;
  }

  #home-introduction {
    margin-right: 0px;
    width: 700px;
    min-width: 700px;
  }

  #home-hello, #about-title, #work-title {
    letter-spacing: 1.5px;
    font-size: 46px;
    margin-top: 60px;
  }

  #home-text, #about-text, #work-text, table {
    font-size: 30px;
    line-height: 44px;
    letter-spacing: 1.25px;
    margin-bottom: 60px;
  }

  #work {
    height: 115%;
    width: 100%;
  }

  td, th {
    padding-top: 30px;
    padding-bottom: 30px;
  }

  table td:nth-child(2) { 
    font-size: 22px;
  }

  #skills-spacer {
    display: none;
  }

  #mobile-links {
    display: block;
  }

  #home-links {
    display: none;
  }

  footer {
    font-size: 26px;
    letter-spacing: 1px;
  }

  .nav-link, .nav-link a:visited {
    margin-top: 30px;
    font-size: 30px;
    letter-spacing: 1.25px;
  }

}

